Set up serving of client from Kotlin server